# AoC-2018

./: .gitignore  jsbin.wusirug.js
AoC/: .clang-tidy  AoC.sln  CMakeLists.txt
AoC/AoC/: AoC.csproj  AocInputProxy.cs  Program.cs  Startup.cs  tsconfig.json
AoC/AoC 2018-2021/wwwroot/: index.html  redirectToLatest.js
AoC/AoC 2022/: AoC-2022.sln
AoC/AoC 2022/AoC-2022/: AoC-2022.cpp  AoC-2022.h  AoC-2022.vcxproj  AoC-2022.vcxproj.filters  CMakeLists.txt  CMakePresets.json  DayOne.cpp  DayOne.h
AoC/AoC 2022/AoC-2022/Days/: Day.cpp  Day.h  Day1.cpp  Day1.h  Day10.cpp  Day10.h  Day11.cpp  Day11.h  Day12.cpp  Day12.h  Day13.cpp  Day13.h  Day14.cpp  Day14.h  Day15.cpp  Day15.h  Day2.cpp  Day2.h  Day3.cpp  Day3.h  Day4.cpp  Day4.h  Day5.cpp  Day5.h  Day6.cpp  Day6.h  Day7.cpp  Day7.h  Day8.cpp  Day8.h  Day9.cpp  Day9.h
AoC/AoC 2022/AoC-2022/Days/DayTemplate/: DayTemplate.cpp  DayTemplate.h
AoC/AoC-cpp/: AoC-cpp.cpp  AoC-cpp.vcxproj  AoC-cpp.vcxproj.filters
AoC/AoC/Properties/: launchSettings.json
AoC/AoC/wwwroot/: index.html  index.todo  redirectToLatest.js  redirectToLatest.js.map  redirectToLatest.ts
AoC/AoC/wwwroot/Day 2/: index.html  script.js
AoC/AoC/wwwroot/Day 3/: script.js
AoC/AoC/wwwroot/Day 4/: script.js
AoC/AoC/wwwroot/Day 5/: script.js
AoC/AoC/wwwroot/Day 6/: script.js
AoC/AoC/wwwroot/Day 7/: script.js
AoC/AoC/wwwroot/Template/: script.js  script.js.map  script.ts
AoC/enc_temp_folder/ce9df6d9f414021141a73fccd442afb/: Day13.cpp
AoC/web/: package-lock.json  package.json  web.njsproj
Day 2/: index.html
(+84 files in other folders)
